# ChangeLog for dev-java/jruby
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/jruby/ChangeLog,v 1.46 2010/01/14 14:43:26 flameeyes Exp $

*jruby-1.4.0-r1 (14 Jan 2010)

  14 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  +jruby-1.4.0-r1.ebuild, +files/auto_gem.rb:
  Fix (again) cache and doc directories creation for gems. Avoid installing
  gentoo.rb at all, instead install auto_gem.rb like it's done for the other
  Ruby packages (this finally completes the break-up of MRI 1.8 and JRuby
  libraries). Install 1.9 mode libraries as well as 1.8, remove rake and
  rspec symlinks (the bundled gems are not installed for either). Avoid
  removing the yecht jar as it's currently not packaged in Gentoo.

*jruby-1.4.0 (14 Jan 2010)

  14 Jan 2010; Alistair Bush <ali_bush@gentoo.org> +jruby-1.4.0.ebuild:
  Version Bump.

  02 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org>
  jruby-1.3.1-r1.ebuild:
  Fix creation of cache and doc directories.

*jruby-1.3.1-r1 (29 Dec 2009)

  29 Dec 2009; Alistair Bush <ali_bush@gentoo.org> +jruby-1.3.1-r1.ebuild:
  Changes made to ensure gems that 1.8 and jruby don't collide. See flameeyes
  for the why.

  25 Oct 2009; Mounir Lamouri <volkmar@gentoo.org> jruby-1.2.0-r1.ebuild,
  jruby-1.3.1.ebuild:
  Re-Keyworded for ppc, bug 270910

  19 Sep 2009; Alistair Bush <ali_bush@gentoo.org> jruby-1.3.1.ebuild:
  Restrict tests as they are unstable see #282439.

  22 Aug 2009; Alistair Bush <ali_bush@gentoo.org> jruby-1.3.1.ebuild:
  Fix test issues. see #282252.

*jruby-1.3.1 (07 Aug 2009)

  07 Aug 2009; Alistair Bush <ali_bush@gentoo.org> -jruby-1.3.0_rc1.ebuild,
  +jruby-1.3.1.ebuild:
  Version Bump jruby. Cleanup rc.

  28 May 2009; Petteri Räty <betelgeuse@gentoo.org> jruby-1.3.0_rc1.ebuild:
  Raise jna-posix dependency to >=1.0.1 in order to fix bug #271534.

*jruby-1.3.0_rc1 (27 May 2009)

  27 May 2009; Alistair Bush <ali_bush@gentoo.org> +jruby-1.3.0_rc1.ebuild: