@@ -18,14 +18,13 @@ EBUILD jruby-1.0.3.ebuild 4462 RMD160 83c55f4dd8b7d4c2c92843dd26608da2485b004d S
 EBUILD jruby-1.2.0-r1.ebuild 5023 RMD160 8239a5ba7e717c3a434e98a81eb60875f97e3055 SHA1 e02cefc8138981f6d100bf6e633f04db3327000a SHA256 513ec2c93efaa444220c5ca1c2bfeb46c1244de43b900b38386e8d63f9f94d52
 EBUILD jruby-1.3.1-r1.ebuild 5502 RMD160 94388e24d29a24d3b23013125ae38e5a0e3f4846 SHA1 4c66c6df3aab698f950dc28e57208a4c94d523c7 SHA256 b5b064f8bec2f7ab2c045c684dda9171e57d7942dd22dfaec715dbeba3adc620
 EBUILD jruby-1.3.1.ebuild 5552 RMD160 fd6520487dd38cc12dbc5204b985117c700d454f SHA1 5208c74e8b4a45d8198ccf93c2283bc9b2fe7d69 SHA256 af93273763993cf81cfc14efe1735eb00d1fbf256c2164c74602eceb4eafd1bd
-EBUILD jruby-1.4.0-r1.ebuild 5541 RMD160 9aa4f33ddd99afa3d321e49d4459a7fcaf2c2973 SHA1 6ec854343879a79cf351237a6daefbc6fae20de5 SHA256 223f069ef91a047ceb072c5cd468b29e1c8559f2392d60fb1d2c14d53a7afbf6
-EBUILD jruby-1.4.0.ebuild 5606 RMD160 dbb95ddcc7337baa7a58ada7ecb08da4eccd3898 SHA1 877f0856c7a620285c48805c749c97368af1be7a SHA256 feb6af882ebabc8a4608c8d6d7352382c287a3ccefbe91e54192b9e5f946492b
-MISC ChangeLog 8067 RMD160 5c8e9699f88fae88168b53b0a46430d56b860030 SHA1 f42543242d98e0918149e297fdd5e9456ce30545 SHA256 5e0e93b391ca4d2dd34b0eae8822466a16a5f80c7300189a36e8082036e2da21
+EBUILD jruby-1.4.0-r1.ebuild 5540 RMD160 e86c5c22e2ccef2150ce810c056bb89b14b1fad7 SHA1 4891d4d54bcddacf624896044cf332bd3350bc49 SHA256 5d5d339d4a4ea284986ec53d638d4d5a8006cb51b93369b2416a24d7b3c77701
+MISC ChangeLog 8220 RMD160 61bcfd7784a706d71c25dd3b675a14c177828289 SHA1 9832bec5fdc62fa79e6a6684869f6500822b2ea1 SHA256 aac0f05c8baf9e441cd5ef3ea660a7243af4f4d8e6446e963a4a6dd7cac7dd61
 MISC metadata.xml 159 RMD160 7da5c733c224383ffe350605bc36721a3ff2536f SHA1 99c2655c7bbee2cbc8c79edb2d00d481d62faf95 SHA256 a4ced33e98b00e3a3f725c4c40ef8e76c338db53389465ef871105fbe6e8cbbb
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.14 (GNU/Linux)
 
-iEYEARECAAYFAktPLZkACgkQAiZjviIA2XhSjQCfdNHai9OtpVkub/Qxfvfsm///
-bEUAoOOunWoact7egNPD8FLvuwP2INKw
-=2oPK
+iEYEARECAAYFAktSJU4ACgkQAiZjviIA2XiBUQCgpN9h90zUMUUa1xeOPBrIfo+1
+BMcAoPNa4yjbL9mTIiTkqQVNzsWS7f3/
+=A09G
 -----END PGP SIGNATURE-----
