@@ -1,6 +1,10 @@
 # ChangeLog for dev-java/jruby
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/jruby/ChangeLog,v 1.46 2010/01/14 14:43:26 flameeyes Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/jruby/ChangeLog,v 1.47 2010/01/16 20:45:36 flameeyes Exp $
+
+  16 Jan 2010; Diego E. Pettenò <flameeyes@gentoo.org> -jruby-1.4.0.ebuild,
+  jruby-1.4.0-r1.ebuild:
+  Fix SRC_URI, remove older broken 1.4.0 release.
 
 *jruby-1.4.0-r1 (14 Jan 2010)
 
